// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`todoInput should render correctly value 1`] = `
<div>
  <input
    class="todo-input"
    placeholder=""
    type="text"
    value=""
  />
</div>
`;

exports[`todoInput should render correctly value 2`] = `
<div>
  <input
    class="todo-input"
    placeholder=""
    type="text"
    value="input测试文字"
  />
</div>
`;
